create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <div class="hamburger">
               <span></span>
               <span></span>
-              <span></span>              
+              <span></span>
+              <span></span>
             </div>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -1034,7 +1035,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ck+11SLQJWvmznPO/K4D+hu3o8n8VF2hlRfe7zenIjZNhCeb2jBZTmTrOBHszNO+w4fnM8Sip/X7yk+PnpnWhBLjfjMvZ6jSpcrsL/0S+OJQvFQzu8K4GYNQRw9ZD4XK">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lkCKUN3NOF11FDWHV8X9/BhDl3wsi7m6+FtqhsMcwZ33oVpE0ZB9keO+HDbPXeTHk5CrtCWgK68dnzvOTzSKYLE9UAp0HJ9ZzjYNu3XgAzHDb1AmKU0WL3/y9nb0YaLV">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1044,7 +1045,7 @@
                         <div class="col-md-12 form-group m-0" data-for="email">
                             <input type="email" name="email" placeholder="Enter Your Email*" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-extFooter23-1">
                         </div>
-                        <div class="col-md-12 input-group-btn mx-0 my-2"><button type="submit" class="btn btn-white-outline m-0 btn-form display-4">Subscribe</button></div>
+                        <div class="col-md-12 input-group-btn mx-0 my-2"><button type="submit" class="btn btn-white-outline m-0 btn-form display-4">구독하다</button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
@@ -1099,9 +1100,7 @@
                 </strong></h3>
                 <div class="mbr-footer-list mbr-fonts-style display-4">
                     <ul class="list">
-                        <li>회사소개</li>
-                        <li>Services</li>
-                        <li>Get In Touch</li>
+                        <li>IM선교회 제작</li><li><span style="font-size: 0.9rem;">뇌과학센터 제작</span></li><li><span style="font-size: 0.9rem;">홈페이지 리뉴얼 안내</span><br></li><li><br></li>
                     </ul>
                 </div>
             </div>
@@ -1112,7 +1111,7 @@
                 <div class="mbr-footer-list mbr-fonts-style display-4">
                     <ul class="list">
                         <li><span style="font-size: 0.9rem;">IM선교회</span></li><li><span style="font-size: 0.9rem;">뇌과학센터</span><br></li>
-                        <li>Download for Windows</li>
+                        <li>예바교회</li>
                     </ul>
                 </div>
             </div>
