create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <div class="hamburger">
               <span></span>
               <span></span>
-              <span></span>              
+              <span></span>
+              <span></span>
             </div>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -156,7 +157,7 @@
 
             <div class="col-md-12 col-lg-5">
                 <div class="mbr-figure">
-                    <img src="assets/images/man-2.jpg" alt="">
+                    <img src="assets/images/kakaotalk-20200628.png" alt="" title="">
                 </div>
             </div>
             <div class="col-md-12 col-lg-7 left-block">
@@ -1034,7 +1035,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lkCKUN3NOF11FDWHV8X9/BhDl3wsi7m6+FtqhsMcwZ33oVpE0ZB9keO+HDbPXeTHk5CrtCWgK68dnzvOTzSKYLE9UAp0HJ9ZzjYNu3XgAzHDb1AmKU0WL3/y9nb0YaLV">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N614Z/iXuGSxlUfh7FED8VAb9rXxF3/HCevGUgEqpz3sRmIJlXD8SgHlQIQYnA0iJjbnPDXOSByF1Q8xjevK6G2KCJVGjho09E3kGSs8vYZejenAGdTC/lzqiBdH2HTe">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
