--- a/index.html
+++ b/index.html
@@ -201,13 +201,12 @@
             <div class="col-lg-6 col-md-12 align-center">
                 <img src="assets/images/36.jpg" alt="">
 
-                <h1 class="mbr-section-title mbr-regular pt-5 align-left mbr-fonts-style display-2">Solutions For Your Business</h1>
+                <h1 class="mbr-section-title mbr-regular pt-5 align-left mbr-fonts-style display-2">쇼핑몰 구축</h1>
                 
                 <p class="mbr-text mbr-light pt-4 align-left mbr-fonts-style display-7">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui enim, pharetra at auctor vitae,
-                    mollis nec risus. Phasellus sagittis lectus at suscipit pulvinar.
+                    최신트랜드에 맞게 자사의 쇼핑몰을 구축해드립니다.<br><br>
                 </p>
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#">READ MORE</a></div>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#">더 알아보기 &gt;</a></div>
 
             </div>
 
@@ -215,13 +214,10 @@
 
 
 
-                <h1 class="mbr-section-title mbr-regular pt-5 align-left mbr-fonts-style display-2">Innovative Technology</h1>
+                <h1 class="mbr-section-title mbr-regular pt-5 align-left mbr-fonts-style display-2">반응형웹사이트 제작</h1>
                 
-                <p class="mbr-text mbr-light pt-4 align-left mbr-fonts-style display-7">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui enim, pharetra at auctor vitae,
-                    mollis nec risus. Phasellus sagittis lectus at suscipit pulvinar.
-                </p>
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#">READ MORE</a></div>
+                <p class="mbr-text mbr-light pt-4 align-left mbr-fonts-style display-7">웹표준 기반으로 최신의 디자인과 코딩으로 반응형웹을 구현해 드립니다.<br><br></p>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#">더 알아보기 &gt;</a></div>
 
                 <div class="pt-5">
                     <img src="assets/images/37.jpg" alt="">
@@ -1083,7 +1079,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NxdRg/O7Iet8E95MiPrMJ1JYbwxjSoTIK5j/pHlzvXUORkaW4euUF3htoKBpQBeCEhNtCRMNNcQHbw+79Y4buknf+LH9eC35VHdy+VsABzYf3FWne76vYwSJRPrD5zxU">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y0O1O6BuUT8n7DR0Po4E2DFFbXbHo9zQCGsaOq/41OI6Ovv8NWIpxFH2xhs/b1QqCN4Nbrc0T+O+GQenw++E5PZcNpEsSShB68rYWC0M37AdOA4SjKZTiLA6cCR4zyFQ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1177,7 +1173,7 @@
       <div class="row">
         <div class="media-container-row mbr-white col-lg-12">
           <div class="row-copirayt col-sm-12 col-md-12 col-lg-6">
-            <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-left display-7">Copyright (c)2009-2020 비에이치엔 All Right Reserved.</p>
+            <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-left display-7">Copyright (c)2009-2020 비에이치엔. All Right Reserved.</p>
           </div>
             <div class="row-links col-md-12 col-lg-6">
               <ul class="foot-menu">
