create github pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   
   
   <title>Home</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -18,6 +20,7 @@
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -196,8 +199,8 @@
                         Distribution</h3>
                     <h2 class="mbr-section-title block1-title mbr-semibold mbr-black pb-4 mbr-fonts-style display-2">반응형웹</h2>
                     <p class="mbr-text mbr-black block1-text mbr-regular mbr-fonts-style display-5">
-                        최고의 UI / UX를 바탕으로한 크리에이티브 반응형웹&nbsp;<br></p>
-                    <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black-outline display-4" href="#">READ MORE</a></div>
+                        최고의 UI / UX 디자인크리에이티브 감성<br>인터렉티브 반응형웹&nbsp;<br></p>
+                    <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black display-4" href="#">더 알아보기 &gt;</a></div>
                 </div>
             </div>
 
@@ -214,7 +217,8 @@
                 <div class="box-content">
                     <div class="content1">
                         <h4 class="box-title2 mbr-medium mbr-white pb-2 mbr-fonts-style display-4">Distribution</h4>
-                        <h3 class="box-text2 mbr-regular mbr-white pb-2 mbr-fonts-style display-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+                        <h2 class="mbr-section-title block1-title mbr-semibold mbr-black pb-4 mbr-fonts-style display-2">유투브 LIVE<br>방송시스템</h2>
+                        <h3 class="box-text2 mbr-regular mbr-white pb-2 mbr-fonts-style display-5">유투브 실시간 방송 구축&nbsp;</h3>
                     </div>
                 </div>
 
@@ -227,8 +231,8 @@
                     </h3>
                     <h2 class="mbr-section-title block2-title mbr-semibold mbr-black pb-4 mbr-fonts-style display-2">쇼핑몰</h2>
                     <p class="mbr-text mbr-black block2-text mbr-regular mbr-fonts-style display-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br></p>
-                    <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black-outline display-4" href="#">READ MORE</a></div>
+                        최신 트렌드<br>완벽한 관리<br></p>
+                    <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black display-4" href="#">더 알아보기 &gt;</a></div>
                 </div>
             </div>
 
@@ -1327,7 +1331,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wGMSafukn5ABGSyJqv7Mv2WIob1/5Y4mTjNQ/VgN0ZsihjElhIl6m4Rp+SjqN3v98TzLFwwB+fffK5LalWgAUfHZEsbvc6QRiJ1wWkkiUaW7OXbG3GJB8T3KSs/4er90">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g/AWrfQC42lIx7uOq7ZQYcBqcuCmG+QgjvEJ/0RG01TCgLZ+Yr3Cv42q6JXyOldt6pfdWE84g4H5yDtZ5o88gv6b2hR4/FdbfNNJ0gVe6UQiSYdVR+c0iQ9morVdiDoh">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1460,6 +1464,7 @@
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
