--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
                     <div class="card-box">
                         <h2 class="number pb-3 mbr-fonts-style display-5">I</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>프로젝트 토론</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">프로젝트의 범위<br>예산 파악.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">프로젝트의<br>범위 및&nbsp;예산 파악<br></p>
                            <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
                     </div>
                 </div>
@@ -1211,7 +1211,7 @@
                     <div class="card-box">
                         <h2 class="number pb-3 mbr-fonts-style display-5">II</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>컨셉도출</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Lorem ipsum dolor sit amet, consectetur.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">로고,컬러,사진,이미지,영상<br>컨텐츠를 활용한 컨셉 도출</p>
                           <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
                     </div>
                 </div>
@@ -1222,7 +1222,7 @@
                     <div class="card-box">
                         <h2 class="number pb-3 mbr-fonts-style display-5">III</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>UX/UI Planning</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">컨셉 바탕으로 <br>UI / UX 계획<br></p>
                            <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
                     </div>
                 </div>
@@ -1233,7 +1233,7 @@
                     <div class="card-box">
                         <h2 class="number pb-3 mbr-fonts-style display-5">IV</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>디자인</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">최신 트렌드에 맞는<br>디자인 구축</p>
+                        <p class="mbr-text mbr-fonts-style display-4">최신 트렌드에 맞는<br>아이덴티티 디자인</p>
                          <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 </strong>&gt;</h3>
                     </div>
                 </div>
@@ -1381,7 +1381,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y4wIyEkhexdWVpdPFPGqsRvZtfrKlcz3Mqv/Qyu0BoQieDrVw6rsmr+AysxCeDclK0If2Jor4tdx5QZ63+lfOVoWzE8JijZQ6LEsE/vaCY56qm2NOZNDao8Xpl5nGZfw">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jjouJym767NhGxFmqzSLyVEiZzl0JW7yjRac3P/MvXrX9h14CrknzRnu1rjjjdHv8zPwVUG3PqXYpLf7NretSprBaU1Y9tn1YvX9cOV85SckzX7nlGKSZfeMwRjn3+L+">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
