create github pages

--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">최고의 비지니스 솔루션</h2>
 
-        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">반응형웹 × 고화질 동영상 스트리밍 시스템 구축 × 쇼핑몰&nbsp;</h3>
+        <h3 class="mbr-section-subtitle mbr-fonts-style display-5">반응형웹 × 앱 × 고화질 동영상 스트리밍 시스템 구축 × 쇼핑몰&nbsp;</h3>
 
         <div class="row pt-5 mt-5">
             <div class="col-md-6 text-elements pb-md-0 pb-3">
-                <h4 class="section-content-title pb-3 align-left mbr-fonts-style display-5">Best Happy Newgeneration.</h4>
+                <h4 class="section-content-title pb-3 align-left mbr-fonts-style display-5">about <em>bhn.</em></h4>
                 <p class="section-content-text align-left mbr-fonts-style m-0 display-7">우리 BHN은 크리에이티브한 웹사이트 구축, 고화질 동영상 스트리밍 시스템 구축, 쇼핑몰 구축으로 고객께서 빠르게 시대의 요구에 대응할 수 있도록 도와드리겠습니다.&nbsp;&nbsp;<br></p>
             </div>
             <div class="progress_elements col-md-6">
                 <div class="progress1 pb-5">
                     <div class="progress-container">
-                        <span class="progress-title mbr-fonts-style mbr-bold mbr-white display-7">Web</span>
+                        <span class="progress-title mbr-fonts-style mbr-bold mbr-white display-7">Web / App</span>
                         <div class="progress_value mbr-bold mbr-white">
                             <div class="progressbar-number"></div>
                             <span>%</span>
@@ -1222,7 +1222,7 @@
                     <div class="card-box">
                         <h2 class="number pb-3 mbr-fonts-style display-5">III</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>UX/UI Planning.</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">최신 트렌드에 맞는<br>아이덴티티 디자인으로&nbsp;<br>UI / UX 계획 수립<br></p>
+                        <p class="mbr-text mbr-fonts-style display-4">최신 트렌드에 맞는<br>아이덴티티 디자인<br></p>
                            <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
                     </div>
                 </div>
@@ -1381,7 +1381,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="x4D+wDfaFzTnrBlwiu29D/2isAPBVOzIgfnQIhPFWi4lrcwNCqJ1hiFjZf7JqDhq21pd/+ONnhDXH0ctL9K2MMHO8LZ3sIqXLJbsZLYq1IyISNpqOJIX3RxcrVFVTA5E">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hXTqLBKckRHIzIx4p/vtIKCAEn8jagbQwjr2reDwwIK+tGZ/T/Qf+mEciBiKC0gyaYa8MJG3OJ1TQjPa7rnDLvEXo66LPqG0Evm+UqxyqEvjGkcrTpnkeNskpqjw0T4q">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
