--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
 </section>
 
-<div class="modal mbr-popup cid-s3c1soAM6J fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-1d" aria-hidden="true">
+<div class="modal mbr-popup cid-s3c1soAM6J fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" data-on-exit="true" data-on-scroll="true" id="mbr-popup-1d" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
@@ -1642,7 +1642,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EEbYCE0zjFnNMxUqzCx+ENtc2Sxs0Ll4orglZfy019+3qIhmyYb6VRn3vX45Z2C1mGJOYmBckNtAPh98rU+n45suJq+VmaAA0GhgRS47zoKdBGGQPGBIsvkb5ivLrnc2">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YsUrTamgZYI+cWe8rOHAmi3gT9zB1/ic1aMaoiQQGybEdbIaAsEVbFh4pukpIPK0E+MDFeCXr9LsdpTZGAEhUDKZsmYSCZfg0voQj9oM9hgSr50pIikXJT+ebyFnaeIy">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -1773,6 +1773,8 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/popup-plugin/script.js"></script>
+  <script src="assets/popup-onexit-plugin/script.js"></script>
+  <script src="assets/popup-onscroll-plugin/script.js"></script>
   <script src="assets/popup-overlay-plugin/script.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>
