create github pages

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 mbr-white pb-lg-0 pb-2">
-                    <h2 class="mbr-section-title mbr-fonts-style m-0 display-2">불꽃웹사이트<br><span style="font-weight: normal;">리뉴얼중&nbsp;</span></h2>
+                    <h2 class="mbr-section-title mbr-fonts-style m-0 display-2"><span style="font-weight: normal;">불꽃웹사이트</span><br>리뉴얼중<span style="font-weight: normal;">&nbsp;</span></h2>
                 </div>
                 <div class="countdown-cont align-center col-lg-6">
                     <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
@@ -230,7 +230,7 @@
 </section>
 
 <div class="modal mbr-popup cid-s3c1soAM6J fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" data-on-timer-delay="5" data-on-exit="true" data-on-scroll="true" id="mbr-popup-1d" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-1">ㅈㅇㅈ</h5>
@@ -1664,7 +1664,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xP4XOCttFL0FOzoPHtQhiGuJJmENqACmb+wpK9wGIn315RkMa2JrjYUDClx9T5Kh/wiNHBThOmkEEW3GqucqnsEV1/M+xlPbCqlnDGoqxDrAvt5YPO+lbt7aRpyVgcSs">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5XarVHw5cD3ok6GHit79B8RnPpjSCoySAa4fbghHD21aHYGCfS4xUHsEfe/gMJ+7ABVe7/x6EFvF23Cn+aP7DIjt/Q5AYdosIhHqlpTzuSNfIhwbj05Ck4ykRsuk2XsE">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
