--- a/index.html
+++ b/index.html
@@ -1337,9 +1337,7 @@
             <div class="col-lg-12 align-center">
               <h2 class="mbr-fonts-style mbr-section-title mbr-bold mbr-black display-2">주요고객사</h2>
               
-              <p class="mbr-text mbr-fonts-style display-7">Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Donec ullamcorper <br>neque dapibus ipsum semper, sit amet luctus turpis porttitor.
-              </p>
+              <p class="mbr-text mbr-fonts-style display-7">불꽃기업 비에이치엔과 함께하는 파트너사</p>
             </div>
         </div>
     </div>
@@ -1664,7 +1662,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cxIMb2r+JqJHZPVAIzKZnu8aHXqNrB9DGSZCIyDyyIWBz2NXvwAS2pSRwtYdJGbhS+ZmjpFPTgMsh1Ou+9iDNUkO8VtePpnvceFRw4VSDBzMB6LZf/s13RPkv26uaT5x">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aLRnSZWiP0keDFLiae+nHtFA0XZCsGAUEdan4NDJqqs1UHsIlnes+7Pg4J1h93ZLCHtUqnSl2ObmFEfQWL4tO+ZIW1UR32T3bgqH7y33AMxzEHkv/Okme9Dpxg70TDv9">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
