--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
               <span></span>
               <span></span>
               <span></span>
-              <span></span>
             </div>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -1875,7 +1874,8 @@
   <script src="assets/gallery/player.min.js"></script>
   <script src="assets/gallery/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  
+  <script data-who="💎 Made with naker.io 💎" src="https://d23jutsnau9x47.cloudfront.net/back/v1.0.9/viewer.js" data-option="{|environment|:{|gradient|:|horizontal|,|sensitivity|:0.6,|colorStart|:[0,0,0,1],|colorEnd|:[0,0,0,1]},|particle|:{|life|:1.1,|power|:0.1,|texture|:|https://res.cloudinary.com/naker-io/image/upload/v1566560053/muzzle_03.png|,|number|:597,|colorStart|:[255,0,0,0.33],|colorEnd|:[255,0,0,0.48],|sizeStart|:2,|sizeEnd|:4,|direction1|:{|x|:0,|y|:0,|z|:0},|direction2|:{|x|:0,|y|:0,|z|:0}},|waterMark|:false}" data-container="features05-7"></script>
+
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
